--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,20 +2,22 @@
 
 <div class="lines-list">
   @for (line of lines(); track line.id) {
-    <div class="line-item">
-      <div class="line-header">
-        <mat-icon>directions_transit</mat-icon>
-        <h2 class="subtitle">{{ line.id }}</h2>
-        <span class="stops-count">{{ line.stops.length }} Stops</span>
-      </div>
-      <div class="stops-list">
-        @for (stop of line.stops; track stop.id) {
-          <div (click)="selectStop(stop.id)" class="stop-item">
-            <mat-icon>stop_circle</mat-icon>
-            <span>{{ stop.name }}</span>
-          </div>
-        }
-      </div>
+  <div class="line-item">
+    <div class="line-header" (click)="toggleExpanded(line)">
+      <mat-icon>directions_transit</mat-icon>
+      <h2 class="subtitle">{{ line.id }}</h2>
+      <span class="stops-count">{{ line.stops.length }} Stops</span>
     </div>
+    @if (line.isExpanded){
+    <div class="stops-list">
+      @for (stop of line.stops; track stop.id) {
+      <div (click)="selectStop(stop.id)" class="stop-item">
+        <mat-icon>stop_circle</mat-icon>
+        <span>{{ stop.name }}</span>
+      </div>
+      }
+    </div>
+    }
+  </div>
   }
 </div>
